# py-madvr-envy

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml  dependabot-automerge.yml  pr-title.yml  publish.yml  release-dry-run.yml  release.yml
docs/: ARCHITECTURE.md  PROTOCOL_COVERAGE.md  ha_coordinator_example.py
madvr_envy/: __init__.py  adapter.py  client.py  commands.py  exceptions.py  ha_bridge.py  integration_bridge.py  protocol.py  runtime.py  state.py  transport.py
tests/: test_adapter.py  test_client.py  test_commands.py  test_ha_bridge.py  test_integration_bridge.py  test_protocol.py  test_replay.py  test_state.py
