[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "madvr-envy"
dynamic = ["version"]
description = "Async Python client for madVR Envy IP Control."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Ben Johnson" }]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Topic :: Home Automation",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/binarylogic/py-madvr-envy"

[tool.hatch.version]
path = "madvr_envy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["madvr_envy"]

[tool.hatch.build.targets.wheel.force-include]
"madvr_envy/py.typed" = "madvr_envy/py.typed"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.13.0",
  "ty>=0.0.1a19",
]

[tool.pytest.ini_options]
log_level = "DEBUG"
testpaths = ["tests"]
norecursedirs = [".git"]

[tool.ruff]
line-length = 127
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90", "UP", "B", "SIM", "ASYNC"]
ignore = ["ASYNC109", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["madvr_envy"]
